--- a/STRenderWebService/packages.config
+++ b/STRenderWebService/packages.config
@@ -3,6 +3,7 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
   <package id="itext7" version="7.1.3" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.6" targetFramework="net461" />
