--- a/HTMLtoPDFLib1/ClassLibrary1/packages.config
+++ b/HTMLtoPDFLib1/ClassLibrary1/packages.config
@@ -5,7 +5,10 @@
   <package id="itext7" version="7.1.3" targetFramework="net461" />
   <package id="itext7.licensekey" version="3.0.3" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.13" targetFramework="net461" />
-  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="NReco.PdfGenerator" version="1.1.15" targetFramework="net461" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net461" />
   <package id="System.Drawing.Common" version="4.5.1" targetFramework="net461" />
